kubernetes-yml/devdeploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
kind: Service
apiVersion: v1
metadata:
  name: dev
  namespace: dev
spec:
  selector:
    app: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
        - name: dev
          image: srycantthnkof1/minitwit:latest
          ports:
          - containerPort: 5000
          imagePullPolicy: Always
