kubernetes-yml/nginx.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: webserver
spec:
  type: NodePort
  selector:
    app: webserver
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: hostvol
          mountPath: usr/share/nginx/html
      volumes:
      - name: hostvol
        hostPath: 
          path: /home/docker/vol
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: webserver
#  annotations:
#    nginx.org/redirect-to-https: 'False'
#spec:
#  rules:
#  - host: webserver.kube
#    http:
#      paths:
#      - path: /
#        backend:
#          serviceName: webserver
#          servicePort: 5000
