kubernetes-yml/proddeploy.yml
kind: Service
apiVersion: v1
metadata:
  name: prod-app
spec:
  type: NodePort
  selector:
    app: prod
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30001
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: prod
    spec:
      containers:
        - name: prod-app
          image: prod:latest
          ports:
          - containerPort: 5000
          imagePullPolicy: Never
