kubernetes-yml/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev
  namespace: dev
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /ci
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
   - http:
      paths:
      - path: /ci/*
        backend:
          serviceName: dev
          servicePort: 5000
